--- a/irmin-scylla.opam
+++ b/irmin-scylla.opam
@@ -31,6 +31,7 @@ pin-depends: [
   [ "irmin-watcher.dev" "git+https://github.com/patricoferris/irmin-watcher#d0e92b4ba5631b5f4dc0f3c00d97e79542dba45d" ]
   [ "scylla.dev" "git+https://github.com/anmolsahoo25/ocaml-scylla.git#eio"]
   [ "irmin.dev" "git+https://github.com/anmolsahoo25/irmin.git#eio"]
+  [ "ppx_irmin.dev" "git+https://github.com/anmolsahoo25/irmin.git#eio"]
 ]
 
 synopsis: "Scylla based distributed backend for Irmin"
